addded mobile version frenchcoffee and croissant and fixed alignments

--- a/app/public/style/styles.css
+++ b/app/public/style/styles.css
@@ -489,6 +489,25 @@
       padding: 5px !important;
       box-sizing: border-box !important;
    }
+
+   .youtubeFrameCroissant {
+      width: 100% !important;
+      padding: 30px 0px 30px 0px !important;
+   }
+
+   .youtubeFrameCoffee {
+      width: 100% !important;
+      height: 200px;
+      padding: 30px 0px 30px 0px !important;
+   }
+
+   .howToCroissant {
+      width: 90% !important;
+   }
+
+   .howToCoffee {
+      width: 90% !important;
+   }
 }
 
 @media print {
@@ -1026,31 +1045,39 @@ main p {
 .box {
    padding: 30px;
    display: flex;
-   justify-content: space-around;
+   justify-content: space-between;
    flex-wrap: wrap;
+   padding: 20px 10% 30px 10%;
 }
 
 .box h2 {
    padding: 0px;
 }
 
-.howToContent {
+.howToCroissant {
    width: 75%;
    display: flex;
    align-items: flex-start;
    flex-direction: column;
 }
 
+.howToCoffee {
+   width: 45%;
+   display: flex;
+   align-items: flex-start;
+   flex-direction: column;
+}
+
 .youtubeFrameCoffee {
-   padding-top: 50px;
    height: 400px;
-   width: 800px;
+   width: 100%;
+   padding: 50px 50px 30px 50px;
 }
 
 .youtubeFrameCroissant {
    padding-top: 60px;
-   width: 400px;
-   height: 200px;
+   width: 52%;
+   height: 250px;
 }
 
 .hidden {
